Frontend Ui changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,130 +8,48 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .link {
-            stroke: #999;
-            stroke-opacity: 0.6;
-            stroke-width: 2px;
-        }
-
-        .node {
-            width: auto;
-            height: auto;
-            position: absolute;
-            z-index: 1;
-        }
-
-        .card {
-            width: 100%;
-            height: 100%;
-            border: 1px solid #ccc;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .node-card {
-            min-width: 100px;
-        }
-
-        #graph_svg {
-            width: 100%;
-            height: 100%;
-        }
-
-        .bootstrap-card {
-            display: inline-block;
-            width: 100%;
-        }
-
-        #graph-container {
-            position: relative;
-            width: 100%;
-            height: 80vh;
-        }
-
-        svg {
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 0;
-        }
-
-
-        #code-editor {
-            height: 70vh;
-            width: auto;
-        }
-
-
-        .container {
-            max-width: 100vw;
-            width: 100vw;
-            padding: 0;
-            margin: 0;
-        }
-
-
-        .row {
-            margin: 10;
-            padding: 10;
-            width: 100%;
-            display: flex;
-        }
-
-
-        .col-sm-graph {
-            flex: 7;
-            padding: 0;
-        }
-
-        .col-sm-editor {
-            flex: 3;
-            padding: 0;
-        }
-
-
-        body {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+    <link href="{{ url_for('static', filename='styles/styles.css' ) }}" rel="stylesheet">
 </head>
 
 <body>
 
+    <div class="navbar">
+        <button onclick='drawGraph(circle(5))'>Circle</button>
+        <button onclick='step()'>Step</button>
+    </div>
+
     <div class="container">
-        <div class="row">
-            <div class="col-sm-graph">
-                <div class="card" id="graph-container">
-                    <svg id="graph_svg" style="display:block;"></svg>
-                </div>
 
-                <button type="button" class="btn btn-primary" onclick='drawGraph(circle(5))'>Circle</button>
-            </div>
-
-            <div class="col-sm-editor">
-                <div class="card">
-                    <div id="code-editor"></div>
-                </div>
-
-                <button type="button" class="btn btn-primary" onclick='step()''>Step</button>
-            </div>
-
+        <div class="sidebar">
+            <div class = editor id="node-editor"></div>
         </div>
+
+        <div class="graph-area" id=graph-container>
+            <svg id="graph_svg" style="display:block;"></svg>
+        </div>
+
+        <div class="info-sidebar">
+            <div class  = "editor" id="code-editor"></div>
+        </div>
+
     </div>
 
 </body>
 
-<script src="{{ url_for('static', filename='scripts.js' ) }}"></script>
+<script src="{{ url_for('static', filename='scripts/scripts.js' ) }}"></script>
 
-                    <script>
+<script>
 
-                        var editor = ace.edit("code-editor");
-                        editor.setTheme("ace/theme/monokai");
-                        editor.session.setMode("ace/mode/javascript");
-                        editor.resize();
-                        editor.setValue(`int leader = 0;
+    var node_editor = ace.edit("node-editor");
+    node_editor.setTheme("ace/theme/monokai");
+    node_editor.session.setMode("ace/mode/javascript");
+    node_editor.resize();
+
+    var editor = ace.edit("code-editor");
+    editor.setTheme("ace/theme/monokai");
+    editor.session.setMode("ace/mode/javascript");
+    editor.resize();
+    editor.setValue(`int leader = 0;
 int state = 0;
 int id = UID;
 int msg;
@@ -163,6 +81,6 @@ msg = <-msgs;
 }
 }`);
 
-                    </script>
+</script>
 
 </html>
