Changes to graph creation on the frontend

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -7,11 +7,15 @@
 .node {
     width: auto;
     height: auto;
-    position: absolute; 
+    position: absolute;
     z-index: 1;
     min-width: 100px;
 }
-foreignObject { overflow: visible; }
+
+foreignObject {
+    overflow: visible;
+}
+
 .card {
     width: 100%;
     height: 100%;
@@ -57,8 +61,9 @@ svg {
     width: 100%;
     max-width: none;
     margin-top: 20px;
-    position: relative; 
+    position: relative;
 }
+
 body {
     margin: 0;
     padding: 0;
@@ -66,13 +71,12 @@ body {
 
 
 .navbar {
-    width: 100%;
-    display: flex;
     justify-content: center;
     gap: 10px;
     background: #222;
     padding: 10px;
 }
+
 .navbar button {
     background: #444;
     color: white;
@@ -90,7 +94,7 @@ body {
 .graph-area {
     flex: 1;
     display: flex;
-   
+
     border: 1px solid #ccc;
     min-height: 400px;
     background: white;
@@ -100,4 +104,52 @@ body {
     width: 30%;
     padding: 10px;
     background: #f4f4f4;
+}
+.toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+}
+
+/* Hide default checkbox */
+.toggle-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.label {
+    color :#ccc;
+}
+/* The track */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    background-color: #ccc;
+    border-radius: 24px;
+    width: 100%;
+    height: 100%;
+    transition: background-color 0.3s;
+}
+
+/* The circular slider */
+.slider::before {
+    content: "";
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 4px;
+    bottom: 2px;
+    background-color: white;
+    border-radius: 50%;
+    transition: transform 0.3s;
+}
+
+/* Toggled state */
+.toggle-switch input:checked+.slider {
+    background-color: #4caf50;
+}
+
+.toggle-switch input:checked+.slider::before {
+    transform: translateX(26px);
 }
