--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,28 @@
     <link href="{{ url_for('static', filename='styles/styles.css' ) }}" rel="stylesheet">
 </head>
 
-<body>
+<style>
+    
+</style>
 
+<body>
+         
     <div class="navbar">
-        <button onclick='drawGraph(circle(5))'>Circle</button>
+       
+        <label class = "label" id = "directedLabel">Undirected</label>
+        <label class="toggle-switch">
+            <input id = "directedCheckbox"type="checkbox" />
+            <span class="slider"></span>
+        </label>
+        <button onclick='circle(5)'>Circle</button>
+        <button onclick='star(5)'>Star</button>
         <button onclick='step()'>Step</button>
     </div>
 
     <div class="container">
 
         <div class="sidebar">
-            <div class = editor id="node-editor"></div>
+            <div class=editor id="node-editor"> </div>
         </div>
 
         <div class="graph-area" id=graph-container>
@@ -29,7 +40,7 @@
         </div>
 
         <div class="info-sidebar">
-            <div class  = "editor" id="code-editor"></div>
+            <div class="editor" id="code-editor"></div>
         </div>
 
     </div>
@@ -40,10 +51,76 @@
 
 <script>
 
+const checkbox = document.getElementById('directedCheckbox');
+
+checkbox.addEventListener('change', (event) => {
+  if (event.currentTarget.checked) {
+    document.getElementById('directedLabel').innerHTML = "Directed";
+  } else {
+    document.getElementById('directedLabel').innerHTML = "Undirected";
+  }
+})
+
     var node_editor = ace.edit("node-editor");
     node_editor.setTheme("ace/theme/monokai");
     node_editor.session.setMode("ace/mode/javascript");
-    node_editor.resize();
+    node_editor.getSession().on('change', function () {
+        update()
+    });
+
+    function createGraph(inputEdges) {
+        let machines = {};
+
+        inputEdges.forEach(edge => {
+
+            if (edge.length == 1) {
+                machines[edge[0]] = {
+                    id: edge[0],
+                    state: {},
+                    neighbors: [],
+                    message_stack: []
+                };
+
+            }
+            else if (edge.length == 2) {
+                node1 = edge[0];
+                node2 = edge[1];
+                machines[node1].neighbors.push(String(node2));
+                if(!checkbox.checked){
+                machines[node2].neighbors.push(String(node1));
+                }
+            }
+
+        });
+
+        return machines;
+    }
+
+    function update() {
+        var val = node_editor.getSession().getValue().trim();
+        var edges = val.split('\n').map(x => x.split(' ').map(x => parseInt(x)));
+        try {
+            var graph = createGraph(edges);
+            drawGraph(graph);
+        } catch (e) {
+            console.log(e);
+            console.log(edges);
+        }
+    }
+
+    function reverseGraph(machines) {
+        var nodes = Object.keys(machines);
+        var edges = [];
+        nodes.forEach(node => {
+            machines[node].neighbors.forEach(neighbor => {
+                edges.push([neighbor, node]);
+            });
+        });
+        console.log(nodes);
+        console.log(edges);
+        return nodes.join('\n')+ "\n" + edges.map(x => x.join(' ')).join('\n');
+         
+    }
 
     var editor = ace.edit("code-editor");
     editor.setTheme("ace/theme/monokai");
