--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,6 @@
 <body>
 
     <div class="navbar">
-
         <label class="label" id="directedLabel">Undirected</label>
         <label class="toggle-switch">
             <input id="directedCheckbox" type="checkbox" />
@@ -26,10 +25,11 @@
         <button onclick='star(parseInt( document.getElementById("nodeCount").value))'>Star</button>
         <button onclick='full(parseInt( document.getElementById("nodeCount").value))'>Full</button>
         <button onclick='step()'>Step</button>
+        <button >Random </button>
     </div>
 
     <div class="container">
-
+        
         <div class="sidebar">
             <div class=editor id="node-editor"> </div>
         </div>
