--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 
 </body>
 
-
+<script src="{{ url_for('static', filename='dist/index.js' ) }}"></script>
 <script src="{{ url_for('static', filename='dist/graph_drawing.js' ) }}"></script>
 <script src="{{ url_for('static', filename='dist/graph_update.js' ) }}"></script>
 <script src="{{ url_for('static', filename='dist/graph_shapes.js' ) }}"></script>
