--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,3 +1,5 @@
+
+
 .link {
     stroke: #999;
     stroke-opacity: 0.6;
@@ -52,8 +54,16 @@ svg {
 .editor {
     height: 80vh;
     width: auto;
+    position: relative;
+    
 }
-
+#code-editor{
+    min-width: 450px;
+}
+#node-editor
+{
+    min-width: 300px;
+}
 
 .container {
     display: flex;
@@ -77,7 +87,7 @@ body {
     padding: 10px;
 }
 
-.navbar button {
+.button {
     background: #444;
     color: white;
     border: none;
@@ -86,15 +96,15 @@ body {
 }
 
 .sidebar {
+    position: relative;
     width: 20%;
-    padding: 10px;
+    padding: 0px;
     background: #f4f4f4;
 }
 
 .graph-area {
     flex: 1;
     display: flex;
-
     border: 1px solid #ccc;
     min-height: 400px;
     background: white;
@@ -102,7 +112,8 @@ body {
 
 .info-sidebar {
     width: 30%;
-    padding: 10px;
+    padding: 0px;
+ 
     background: #f4f4f4;
 }
 .toggle-switch {
@@ -112,16 +123,16 @@ body {
     height: 24px;
 }
 
-/* Hide default checkbox */
 .toggle-switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
+
 .label {
     color :#ccc;
 }
-/* The track */
+
 .slider {
     position: absolute;
     cursor: pointer;
@@ -132,7 +143,7 @@ body {
     transition: background-color 0.3s;
 }
 
-/* The circular slider */
+
 .slider::before {
     content: "";
     position: absolute;
@@ -145,11 +156,24 @@ body {
     transition: transform 0.3s;
 }
 
-/* Toggled state */
+
+
+
 .toggle-switch input:checked+.slider {
     background-color: #4caf50;
 }
 
 .toggle-switch input:checked+.slider::before {
     transform: translateX(26px);
+}
+
+.toggle-switch input:checked + .slider .bi-play-fill {
+    display: none;
+}
+
+.toggle-switch input:checked + .slider::after {
+    position: absolute;
+    left: 80%;
+    top: 55%;
+    transform: translate(-50%, -50%);
 }
