--- a/templates/index.html
+++ b/templates/index.html
@@ -6,44 +6,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Distributed System Simulator</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link href="{{ url_for('static', filename='styles/styles.css' ) }}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typescript/4.9.5/typescript.min.js"></script>
+
 </head>
 
 <body>
-
     <div class="navbar">
-        <label class="label" id="directedLabel">Undirected</label>
+        <button class="button" onclick='step_back()'><i class="bi-caret-left"></i></button>
         <label class="toggle-switch">
-            <input id="directedCheckbox" type="checkbox" />
-            <span class="slider"></span>
+            <input id="playCheckbox" type="checkbox" onchange="togglePlayPause(this)" />
+            <span id="playSlider" class="slider">
+                <i class="bi bi-play-fill"
+                    style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);"></i>
+            </span>
         </label>
-        
-        <input type="number" id="nodeCount" value="5" min="1" max="100">
-        <button onclick='circle(parseInt( document.getElementById("nodeCount").value))'>Circle</button>
-        <button onclick='star(parseInt( document.getElementById("nodeCount").value))'>Star</button>
-        <button onclick='full(parseInt( document.getElementById("nodeCount").value))'>Full</button>
-        <button onclick='step()'>Step</button>
-        <button >Random </button>
+        <button class="button" onclick='step_forward()'> <i class="bi-caret-right"></i> </button>
     </div>
 
     <div class="container">
-        
-        <div class="sidebar">
-            <div class=editor id="node-editor"> </div>
+        <div class="sidebar collapse collapse-horizontal show" id="collapseWidthExample">
+            <div>
+                <div class="editor " id="node-editor"></div>
+            </div>
+            <div class="dropdown" style="position:absolute; top: 20px; right: 20px;">
+
+
+
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                    <i class="bi bi-plus-circle"></i>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li>
+                        <div class="dropdown-header button">
+                            <input type="number" id="nodeCount" value="5" min="1" max="100">
+                            <label class="label" id="directedLabel">Undirected</label>
+                            <label class="toggle-switch">
+                                <input id="directedCheckbox" type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </div>
+                    </li>
+                    <li><button class=" button dropdown-item "
+                            onclick='circle(parseInt( document.getElementById("nodeCount").value))'>Circle</button></li>
+                    <li><button class=" button dropdown-item "
+                            onclick='star(parseInt( document.getElementById("nodeCount").value))'>Star</button> </li>
+                    <li><button class=" button dropdown-item "
+                            onclick='full(parseInt( document.getElementById("nodeCount").value))'>Full</button> </li>
+                    <li><button class=" button dropdown-item ">Random </button> </li>
+                </ul>
+            </div>
         </div>
+
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
+            aria-expanded="false" aria-controls="collapseWidthExample">
+            <i class="bi bi-check-square-fill"></i>
+        </button>
 
         <div class="graph-area" id=graph-container>
             <svg id="graph_svg" style="display:block;"></svg>
         </div>
 
-        <div class="info-sidebar">
-            <div class="editor" id="code-editor"></div>
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
+            aria-expanded="false" aria-controls="collapseWidthExample">
+            <i class="bi bi-check-square-fill"></i>
+        </button>
+        
+        <div class="info-sidebar collapse collapse-horizontal show" id="collapseWidthExample">
+            <div class="editor " id="code-editor"></div>
         </div>
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
@@ -57,5 +100,6 @@
 <script src="{{ url_for('static', filename='dist/node_editor.js' ) }}"></script>
 <script src="{{ url_for('static', filename='dist/machine.js' ) }}"></script>
 <script src="{{ url_for('static', filename='dist/distributed_system.js' ) }}"></script>
+<script src="{{ url_for('static', filename='dist/toolbar.js' ) }}"></script>
 
 </html>
