--- a/templates/index.html
+++ b/templates/index.html
@@ -5,48 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Distributed System Simulator</title>
+
+    <!-- External Libraries -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <link href="{{ url_for('static', filename='styles/styles.css' ) }}" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typescript/4.9.5/typescript.min.js"></script>
-
+    
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    
+    <!-- Custom Styles -->
+    <link href="{{ url_for('static', filename='styles/styles.css' ) }}" rel="stylesheet">
 </head>
 
 <body>
+    <!-- Navigation Bar -->
     <div class="navbar">
-        <button class="button" onclick='step_back()'><i class="bi-caret-left"></i></button>
+        <button class="btn btn-primary" onclick='step_back()'><i class="bi-caret-left"></i></button>
         <label class="toggle-switch">
             <input id="playCheckbox" type="checkbox" onchange="togglePlayPause(this)" />
             <span id="playSlider" class="slider">
-                <i class="bi bi-play-fill"
-                    style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);"></i>
+                <i class="bi bi-play-fill" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);"></i>
             </span>
         </label>
-        <button class="button" onclick='step_forward()'> <i class="bi-caret-right"></i> </button>
+        <button class="btn btn-primary" onclick='step_forward()'><i class="bi-caret-right"></i></button>
+        <button class="btn btn-primary" onclick='freeze_animation()'><i class="bi bi-thermometer-snow"></i></button>
+        <button class="btn btn-primary" onclick='unfreeze_animation()'><i class="bi bi-thermometer-sun"></i></button>
     </div>
 
     <div class="container">
+        <!-- Sidebar -->
         <div class="sidebar collapse collapse-horizontal show" id="collapseWidthExample">
             <div>
-                <div class="editor " id="node-editor"></div>
+                <div class="editor" id="node-editor"></div>
             </div>
+            
+            <!-- Dropdown Menu -->
             <div class="dropdown" style="position:absolute; top: 20px; right: 20px;">
-
-
-
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
                     data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
                     <i class="bi bi-plus-circle"></i>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li>
                         <div class="dropdown-header button">
-                            <input type="number" id="nodeCount" value="5" min="1" max="100">
+                            <label class="label" id="directedLabel">Node count</label>
+                            <input type="number" class="form-control" id="nodeCount" value="5" min="1" max="100">
                             <label class="label" id="directedLabel">Undirected</label>
                             <label class="toggle-switch">
                                 <input id="directedCheckbox" type="checkbox" />
@@ -54,52 +60,69 @@
                             </label>
                         </div>
                     </li>
-                    <li><button class=" button dropdown-item "
-                            onclick='circle(parseInt( document.getElementById("nodeCount").value))'>Circle</button></li>
-                    <li><button class=" button dropdown-item "
-                            onclick='star(parseInt( document.getElementById("nodeCount").value))'>Star</button> </li>
-                    <li><button class=" button dropdown-item "
-                            onclick='full(parseInt( document.getElementById("nodeCount").value))'>Full</button> </li>
-                    <li><button class=" button dropdown-item ">Random </button> </li>
+                    <li><button class="button dropdown-item" onclick='circle(parseInt(document.getElementById("nodeCount").value))'>Circle</button></li>
+                    <li><button class="button dropdown-item" onclick='star(parseInt(document.getElementById("nodeCount").value))'>Star</button></li>
+                    <li><button class="button dropdown-item" onclick='full(parseInt(document.getElementById("nodeCount").value))'>Full</button></li>
+                    <li><button class="button dropdown-item" onclick='random(parseInt(document.getElementById("nodeCount").value))'>Random</button></li>
                 </ul>
+                <button class="btn btn-primary" onclick="randomise_button()" type="button">
+                    <i class="bi bi-dice-6"></i>
+                </button>
             </div>
         </div>
 
+        <!-- Graph Area -->
         <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
             aria-expanded="false" aria-controls="collapseWidthExample">
             <i class="bi bi-check-square-fill"></i>
         </button>
-
-        <div class="graph-area" id=graph-container>
+        <div class="graph-area" id="graph-container">
             <svg id="graph_svg" style="display:block;"></svg>
         </div>
-
         <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
             aria-expanded="false" aria-controls="collapseWidthExample">
             <i class="bi bi-check-square-fill"></i>
         </button>
-        
+
+        <!-- Info Sidebar -->
         <div class="info-sidebar collapse collapse-horizontal show" id="collapseWidthExample">
-            <div class="editor " id="code-editor"></div>
+            <div>
+                <div class="editor" id="code-editor"></div>
+            </div>
+            
+            <!-- Offcanvas Sidebar -->
+            <div style="position:absolute; top: 20px; right: 20px;">
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#VariablePinOffCanvas" aria-controls="VariablePinOffCanvas">
+                    <i class="bi bi-pin-angle-fill"></i>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="VariablePinOffCanvas" aria-labelledby="VariablePinOffCanvasLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="VariablePinOffCanvasLabel">Offcanvas</h5>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body" id='variable-list'></div>
+                </div>
+            </div>
         </div>
-
     </div>
+
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+    
+    <!-- Custom Scripts -->
+    <script src="{{ url_for('static', filename='dist/index.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/graph_drawing.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/graph_update.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/graph_shapes.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/graph_node.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/network_comm.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/code_editor.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/node_editor.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/machine.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/distributed_system.js' ) }}"></script>
+    <script src="{{ url_for('static', filename='dist/toolbar.js' ) }}"></script>
 </body>
-
-<script src="{{ url_for('static', filename='dist/index.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/graph_drawing.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/graph_update.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/graph_shapes.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/graph_node.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/network_comm.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/code_editor.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/node_editor.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/machine.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/distributed_system.js' ) }}"></script>
-<script src="{{ url_for('static', filename='dist/toolbar.js' ) }}"></script>
-
 </html>
