--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -27,6 +27,7 @@ foreignObject {
 }
 
 
+
 #graph_svg {
     width: 100%;
     height: 100%;
@@ -57,17 +58,12 @@ svg {
     position: relative;
     
 }
-#code-editor{
-    min-width: 450px;
-}
-#node-editor
-{
-    min-width: 300px;
-}
+
 
 .container {
     display: flex;
     flex-wrap: wrap;
+    height: auto;
     width: 100%;
     max-width: none;
     margin-top: 20px;
@@ -77,15 +73,32 @@ svg {
 body {
     margin: 0;
     padding: 0;
+ 
 }
 
 
 .navbar {
+    display: flex;
     justify-content: center;
+    align-items: center;
     gap: 10px;
     background: #222;
     padding: 10px;
 }
+
+.footer {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background: #222;
+    padding: 10px;
+}
+
+
 
 
 
