--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,11 @@
     <title>Distributed System Simulator</title>
 
     <!-- External Libraries -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3js.org/d3.v7.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ext-language_tools.js"></script>
+
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typescript/4.9.5/typescript.min.js"></script>
     
     <!-- Bootstrap -->
@@ -22,22 +25,15 @@
 
 <body>
     <!-- Navigation Bar -->
+     
     <div class="navbar">
-        <button class="btn btn-primary" onclick='step_back()'><i class="bi-caret-left"></i></button>
-        <label class="toggle-switch">
-            <input id="playCheckbox" type="checkbox" onchange="togglePlayPause(this)" />
-            <span id="playSlider" class="slider">
-                <i class="bi bi-play-fill" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);"></i>
-            </span>
-        </label>
-        <button class="btn btn-primary" onclick='step_forward()'><i class="bi-caret-right"></i></button>
-        <button class="btn btn-primary" onclick='freeze_animation()'><i class="bi bi-thermometer-snow"></i></button>
-        <button class="btn btn-primary" onclick='unfreeze_animation()'><i class="bi bi-thermometer-sun"></i></button>
+        <button class="btn btn-primary" onclick='freeze_button()' title="Freeze"><i class="bi bi-thermometer-snow"></i></button>
+        <button class="btn btn-primary" onclick='unfreeze_button()' title="Unfreeze"><i class="bi bi-thermometer-sun"></i></button>
     </div>
 
     <div class="container">
         <!-- Sidebar -->
-        <div class="sidebar collapse collapse-horizontal show" id="collapseWidthExample">
+        <div class="sidebar" id="collapseWidthExample">
             <div>
                 <div class="editor" id="node-editor"></div>
             </div>
@@ -45,47 +41,52 @@
             <!-- Dropdown Menu -->
             <div class="dropdown" style="position:absolute; top: 20px; right: 20px;">
                 <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                    data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside" title="Create Shape">
                     <i class="bi bi-plus-circle"></i>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li>
                         <div class="dropdown-header button">
-                            <label class="label" id="directedLabel">Node count</label>
-                            <input type="number" class="form-control" id="nodeCount" value="5" min="1" max="100">
-                            <label class="label" id="directedLabel">Undirected</label>
-                            <label class="toggle-switch">
-                                <input id="directedCheckbox" type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
+                            <label class="label" >Node count</label>
+                            <input type="number" class="form-control" id="nodeInput" value="5" min="1" max="100">
+                          
                         </div>
                     </li>
-                    <li><button class="button dropdown-item" onclick='circle(parseInt(document.getElementById("nodeCount").value))'>Circle</button></li>
-                    <li><button class="button dropdown-item" onclick='star(parseInt(document.getElementById("nodeCount").value))'>Star</button></li>
-                    <li><button class="button dropdown-item" onclick='full(parseInt(document.getElementById("nodeCount").value))'>Full</button></li>
-                    <li><button class="button dropdown-item" onclick='random(parseInt(document.getElementById("nodeCount").value))'>Random</button></li>
+                    <li> <label class="label" id="directedLabel">Directed</label>
+                        <label class="toggle-switch">
+                            <input id="directedCheckbox" type="checkbox" />
+                            <span class="slider"></span>
+                        </label></li>
+                    <li > <button class="button dropdown-item" onclick='circle_button()'>Circle</button>   </li>
+                    <li > <button class="button dropdown-item" onclick='star_button()'>Star</button> </li>
+                    <li><button class="button dropdown-item" onclick='full_button()'>Full</button>   </li>
+                    <li style = "display: flex; justify-content: space-between;">
+                        <button class="button dropdown-item" onclick='random_button()'>Random</button>
+                        <input type="number" class="form-control" id="completeInput" step = "0.05" value="0.75" min="0" max="1"> 
+                    </li>
                 </ul>
-                <button class="btn btn-primary" onclick="randomise_button()" type="button">
+                <button class="btn btn-primary" onclick="randomise_button()" type="button" title="Randomise UIDs">
                     <i class="bi bi-dice-6"></i>
                 </button>
+              
             </div>
+            <div  style="position:absolute; top: 62px; right: 20px;">
+            <button class="btn btn-primary" onclick="randomise_button()" type="button" title="Confirm">
+                <i class="bi bi-check2"></i>
+            </button>
+        </div>
         </div>
 
         <!-- Graph Area -->
-        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
-            aria-expanded="false" aria-controls="collapseWidthExample">
-            <i class="bi bi-check-square-fill"></i>
-        </button>
+      
         <div class="graph-area" id="graph-container">
-            <svg id="graph_svg" style="display:block;"></svg>
+            <svg id="graph_svg" style="display:block;" ></svg>
         </div>
-        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
-            aria-expanded="false" aria-controls="collapseWidthExample">
-            <i class="bi bi-check-square-fill"></i>
-        </button>
+
+       
 
         <!-- Info Sidebar -->
-        <div class="info-sidebar collapse collapse-horizontal show" id="collapseWidthExample">
+        <div class="info-sidebar " id="collapseWidthExample">
             <div>
                 <div class="editor" id="code-editor"></div>
             </div>
@@ -93,9 +94,14 @@
             <!-- Offcanvas Sidebar -->
             <div style="position:absolute; top: 20px; right: 20px;">
                 <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#VariablePinOffCanvas" aria-controls="VariablePinOffCanvas">
+                    data-bs-target="#VariablePinOffCanvas" aria-controls="VariablePinOffCanvas" title="Pin Variables">
                     <i class="bi bi-pin-angle-fill"></i>
                 </button>
+
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#SaveOffCanvas" aria-controls="SaveOffCanvas" title="Save">
+                <i class="bi bi-list"></i>
+            </button>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="VariablePinOffCanvas" aria-labelledby="VariablePinOffCanvasLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="VariablePinOffCanvasLabel">Offcanvas</h5>
@@ -103,15 +109,52 @@
                     </div>
                     <div class="offcanvas-body" id='variable-list'></div>
                 </div>
+
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="SaveOffCanvas" aria-labelledby="SaveOffCanvasLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="SaveOffCanvasLabel">Offcanvas</h5>
+                        <button class="btn btn-primary" type="button" >
+                        <i class="bi bi-floppy"></i>
+                    </button>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body" id='code-list'>
+                    
+
+
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
+      
+    </div>
+    <div class="footer">
+        <div id = "start_div">
+        <button class="btn btn-primary" onclick='start_simulation_button()' title="Run Simulation">Run Simulation</i></button>
+        </div>
+
+        <div hidden id = "running_div">
+
+            <label class="label" id="stepLabel">Step 0/0</label>
+            <button class="btn btn-primary" onclick='step_button("start")' title="Step Start"><i class="bi-skip-start"></i></button>
+            <button class="btn btn-primary" onclick='step_button("back")' title="Step Back"><i class="bi-caret-left"></i></button>
+            <label class="toggle-switch">
+                <input id="playCheckbox" type="checkbox" onchange="togglePlayPause(this)" />
+                <span id="playSlider" class="slider" title="Play/Pause">
+                    <i class="bi bi-play-fill" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);"></i>
+                </span>
+            </label>
+            <button class="btn btn-primary" onclick='step_button("forward")' title="Step Forward"><i class="bi-caret-right"></i></button>
+            <button class="btn btn-primary" onclick='step_button("end")' title="Step End"><i class="bi-skip-end"></i></button>
+            <button class="btn btn-primary" onclick='stop_simulation_button()' title="Stop Simulation"><i class="bi bi-trash"></i></button>
+        </div>
+    </div>
+   <div id= "alertPlaceholder"></div>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
-    
+    </script> 
     <!-- Custom Scripts -->
     <script src="{{ url_for('static', filename='dist/index.js' ) }}"></script>
     <script src="{{ url_for('static', filename='dist/graph_drawing.js' ) }}"></script>
@@ -124,5 +167,6 @@
     <script src="{{ url_for('static', filename='dist/machine.js' ) }}"></script>
     <script src="{{ url_for('static', filename='dist/distributed_system.js' ) }}"></script>
     <script src="{{ url_for('static', filename='dist/toolbar.js' ) }}"></script>
+    
 </body>
 </html>
