--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,14 @@
     <title>Distributed System Simulator</title>
 
     <!-- External Libraries -->
-    <script src="https://d3js.org/d3.v7.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ext-language_tools.js"></script>
-
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typescript/4.9.5/typescript.min.js"></script>
+    <script src="{{ url_for('static', filename='lib/d3/d3.v7.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/ace/ace.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/ace/ext-language_tools.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/typescript/typescript.min.js') }}"></script>
     
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="{{ url_for('static', filename='lib/bootstrap/bootstrap.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/icons/font/bootstrap-icons.min.css') }}">
     
     <!-- Custom Styles -->
     <link href="{{ url_for('static', filename='styles/styles.css' ) }}" rel="stylesheet">
@@ -166,9 +163,7 @@
     </div>
    <div id= "alertPlaceholder"></div>
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script> 
+    <script src="{{ url_for('static', filename='lib/bootstrap/bootstrap.bundle.min.js') }}"></script>
     <!-- Custom Scripts -->
     <script src="{{ url_for('static', filename='dist/index.js' ) }}"></script>
     <script src="{{ url_for('static', filename='dist/graph_drawing.js' ) }}"></script>
