--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
 
             <label class="label" id="stepLabel">Step 0/0</label>
             <button class="btn btn-primary" onclick='step_button("start")' title="Step Start"><i class="bi-skip-start"></i></button>
-            <button class="btn btn-primary" onclick='step_button("back")' title="Step Back"><i class="bi-caret-left"></i></button>
+            <button class="btn btn-primary" onclick='step_button("backward")' title="Step Back"><i class="bi-caret-left"></i></button>
             <label class="toggle-switch">
                 <input id="playCheckbox" type="checkbox" onchange="togglePlayPause(this)" />
                 <span id="playSlider" class="slider" title="Play/Pause">
